Improved Sidebar and Navbar (Top)
Side Bar :
1) Now All icon will be animated in side bar (while hivering)
2) Added Login & LogOut Button

Nav bar (top) :
1) New Logo applied.
2) This navbar is now responsive
3) Hamburger button added (not in working stage)
4) Notification icon added.
5) UI changed.

+ New Logo (temp)
+ Added style.scss file.
+ Updated gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 *.pyc
 # Vscode custome settings
 .vscode
-# Scss folder will be omitted
-attendance/static/scss
+# layout sample file
+sample.html
 # node_modules
 attendance/node_modules
 package-lock.json
-ignore/kamar
