--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,4 @@ django-crispy-forms==1.9.2
 # livereload not for production
 django-livereload-server==0.3.2
 django-extensions
+django-formset-bootstrap==1.4.0.dev3	#temporary
