Dashboard Update 0.2 + others
Dashboard :
+ Calender wise chart generation (day. week, month)
+ Classroom list will be generate in order of year and sec

UI :
+ Added classroom name to some of the html
+ table now has the custome scroll bar ui
+ smooth scroll on page down & up in add students page
+ fixed classroom manage page

Backend :
+ fixed password to hash value

Others :
+ updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,4 @@ django-crispy-forms==1.9.2
 django-livereload-server==0.3.2
 django-extensions
 django-formset-bootstrap==1.4.0.dev3	#temporary
+django-querysetsequence==0.14
