Optimized Code & changes
Changes:
[Dashboard]
   + Now by clicking particular classroom, data will also be generated based on given date.
   + Improved UI for calender choice (day,week,month)
   + Optimized html code for attendance_by_class chart
   + Now, Single ajax request can update all the data for totals and other charts
   + By default, date will be empty in html

[General]
   + Updated requirements.txt
   + removed unwanted git ignore
   + updated settings.json for vscode

Hosting Stuff:
 + Added whitenoise
 + static_root
 + added custome error 404, 403, 400, 500 pages

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,5 @@ django-livereload-server==0.3.2
 django-extensions
 django-formset-bootstrap==1.4.0.dev3	#temporary
 django-querysetsequence==0.14
+xhtml2pdf==0.2.5
+whitenoise==5.1.0
