fix: use psycopg2-binary instead of psycopg2
Switched our psycopg2 dependency to the psycopg2-binary package.

The psycopg2 package requires locally compiling the psycopg extensions before installing which was failing during deployment. psycopg2-binary contains these extensions pre-compiled for simplified installation.

This change allows us to continue using psycopg2 as our PostgreSQL adapter without hitting compile issues when deploying.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ django-extensions==3.1.5
 django-formset-bootstrap==1.4.0.dev3
 django-livereload-server==0.3.2
 django-querysetsequence==0.14
-psycopg2==2.9.9
+# psycopg2==2.9.9
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 pytz==2023.3.post1
 six==1.16.0
